# coding-ai-agents

./: README.md
coding-google-agents-books/: README.md
coding-llm/: pyproject.toml
coding-llm/gpt2-fine-tuning/: .gitignore  README.md  test.py
coding-mcp/: pyproject.toml  requirements.txt
coding-mcp/crew-ai-client/: autonomous-data-analyst.py  main.py  multi-agent.py  pyproject.toml  test.py
coding-mcp/mcp-github-slack-notification/: README.md  github_events.json  manual_test.md  pyproject.toml
coding-mcp/mcp-yfinance/: README.md  client.py  pyproject.toml  server.py
coding-mcp/my-first-mcp/: README.md
coding-rag/faiss/: main.py  pyproject.toml  requirements.txt
crewai/airbnb_mcp_server/: README.md
crewai/gifts_attendant/: README.md  pyproject.toml  requirements.txt
crewai/guide_creator_flow/: README.md  pyproject.toml
crewai/junior_ticket_support_analyst/: README.md  app.py  crew.py  main.py  pyproject.toml  requirements.txt
crewai/lgpd_specialist/: README.md  requirements.txt
crewai/philosophical_ai/: .gitignore  README.md  crew_setup.py  llm.py  main.py  ollama_setup.py  pyproject.toml  requirements.txt  test.py
crewai/philosophical_ai/docs/setup/: connect.md  ollama_setup.md
crewai/philosophical_ai/docs/setup/examples/: ollama-mistral.py
crewai/yfinance_mcp_server/: .gitignore  README.md  pyproject.toml
google-adk/multi_tool_agent/: pyproject.toml
langchain/: pyproject.toml
research_crew/: README.md  pyproject.toml
training-llm/: test.py  train_gpt2.py
workshop-ai-agents/: env-example  pyproject.toml
(+178 files in other folders)
