[project]
name = "coding-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.2.1",
    "fastmcp>=2.12.2",
    "gradio[mcp]>=5.30.0",
    "huggingface-hub[mcp]>=0.32.0",
    "mcp[cli]>=1.13.1",
]

[tool.uv.workspace]
members = [
    "mcp-yfinance",
    "crew-ai-client",
]
